--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-test",
   "version": "0.1.0",
-  "homepage": "https://phucdd.me",
+  "homepage": "https://phucnd-137.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
